Add partners images, for_schools update

--- a/app/assets/stylesheets/revised/mixins/_colors.scss
+++ b/app/assets/stylesheets/revised/mixins/_colors.scss
@@ -7,6 +7,7 @@ $blue-darkish: #2980b9;
 $blue: #3498db;
 $blue-light: #92c8ec;
 
+$gray-darkest: #1a1a1a;
 $gray-darker: #333333;
 $gray-dark: #222;
 $gray: #666;
