Add for_advocacy page
TODO: consistify naming

--- a/app/assets/stylesheets/revised/pages/landing/_signup.scss
+++ b/app/assets/stylesheets/revised/pages/landing/_signup.scss
@@ -46,6 +46,8 @@ $landing-page-targets: "shop", "school", "advocacy", "law_enforcement",
 }
 
 .signup-landing-page {
+  padding-bottom: 40px;
+
   .trusted-by {
     padding: 10px;
 
