--- a/app/views/landing_pages/for_schools.haml
+++ b/app/views/landing_pages/for_schools.haml
@@ -57,6 +57,11 @@
           %a.btn.btn-primary.btn-lg.scroll-to-ref{ href: '#contact-bike-index', data: { offset: -110 } }
             Contact Bike Index
 
+        .trusted-by.hidden-lg-up
+          %h3
+            Trusted by top universities
+          = image_tag "landing_pages/logos/universities.png", alt: "university partners"
+
       .next-steps-col
         .next-steps-wrap
           %header
