--- a/app/views/landing_pages/for_advocacy.haml
+++ b/app/views/landing_pages/for_advocacy.haml
@@ -1,4 +1,5 @@
 - landing_page_target = 'advocacy'
+
 .signup-landing-page{ class: "signup-landing-page-#{landing_page_target}" }
   %header.banner-header
     .container
@@ -6,29 +7,52 @@
         .icon-wrapper
           = render "/landing_pages/icons/header_#{landing_page_target}_svg"
         .banner-text
-          %h1 Bike Index for <br> Advocacy Organizations
+          %h1 Bike Index for Advocacy Organizations
           %h3 The most wide-reaching and effective tools against bike theft - period.
 
-    .ribbon
-      .container
-        %h2 Leverage us for your mission
   .container
     .row.main-body-row
       .landing-why-col
-        %h3 Why Bike Index?
-        %p
-          Gone are the days where you had to register your bike in your neighborhood, county, city, state and country. Bike Index provides one registry, giving all registrants around the U.S. access to our network of over 120,000 cyclists.  Our goal is to provide free and easy access to our registry for anyone and everyone who rides a bicycle, in any capacity.
+        %h3 Help us help you
 
         %p
-          We want to recover bikes that are stolen. And so do you. We need your help spreading the Bike Index word. In return, we can offer you the most widely used bike registration system in the country.
+          We provide free and easy access to our registry for anyone and
+          everyone who rides a bicycle, in any capacity. Bike Index is a
+          community-driven effort in recovering lost and stolen bikes. No matter
+          the type of bike or cyclist, we want to keep all bikes rolling with
+          the owners that need them.
+
+        %p
+          Spread the Bike Index word to your constituents to get them riding
+          protected. Create a free organization account #{link_to "here", new_organization_path}.
 
         = render partial: '/landing_pages/tweet', locals: { tweet_id: 875377223322259457 }
 
         %h3 Partners made in heaven
         %p
-          Run registration drives? Include a widget on your page? You should add Bike Index and connect with your constituents!
+          Gone are the days where you had to register your bike in your
+          neighborhood, county, city, state and country. Just register all bikes
+          in Bike Index and a cyclists registration will be valid anywhere. Run
+          registration drives? Host community cycling events? Let us know and we
+          will send you Bike Index materials.
+
         %p
-          Read about our over #{ number_with_delimiter Counts.recoveries } recoveries on our <a href="/news">blog</a>. For a complete list of Bike Index’s partners, visit <a href="/where">our partners page</a>. For information on partnering with Bike Index, please contact us.
+          Registrations are free. Forever. Join Bike Index and start registering
+          today.
+
+        %p
+          Purchase a pack of advocacy materials #{link_to "here", "https://bikeindex.myshopify.com/"}.
+
+
+        %h4 Related articles:
+        %ul
+          %li
+            = link_to "Bike Index launches new Ambassadors program",
+            "https://bikeindex.org/news/bike-index-launches-ambassadors-program"
+          %li
+            = link_to "Bike Index welcomes Stolen Bikes NOLA",
+            "https://bikeindex.org/news/bike-index-welcomes-our-newest-partner---stolen-bikes-nola"
+
 
         .mobile-contact-link
           %a.btn.btn-primary.btn-lg{ href: new_organization_path }
@@ -37,36 +61,13 @@
         .trusted-by.hidden-lg-up
           %h3
             Trusted by organizations everywhere
-          - advocacy_partners = capture_haml do
-            %ul
-              %li.partner-logo-rectangle
-                = image_tag 'landing_pages/partners/Indycog.png', alt: 'Indycog'
-              %li
-                = image_tag 'landing_pages/partners/Bike-Pittsburgh.png', alt: 'Bike Pittsburgh'
-              %li.hidden-on-trusted-by-next-steps
-                = image_tag 'landing_pages/partners/Bike-Portland.png', alt: 'Bike Portland'
-              %li
-                = image_tag 'landing_pages/partners/Stolen-Bikes-NOLA.png', alt: 'Stolen Bikes NOLA'
-              %li.partner-logo-rectangle
-                = image_tag 'landing_pages/partners/Bike-East-Bay.png', alt: 'Bike East Bay'
-
-              %li.partner-logo-rectangle
-                = image_tag 'landing_pages/partners/Seattle-Bike-Blog.png', alt: 'Seattle Bike Blog'
-              %li
-                = image_tag 'landing_pages/partners/Wisconsin-Bike-Fed.png', alt: 'Wisconsin Bike Federation'
-
-
-          = advocacy_partners
+          = image_tag "landing_pages/logos/community-groups.png", alt: "community group partners"
 
       .next-steps-col
         .next-steps-wrap
-          %header#contact-bike-index
-            Sign up for free
-          %a.btn.btn-primary.btn-lg{ href: new_organization_path }
-            Get started
-          .trusted-by-next-steps.hidden-md-down
-            %h3
-              Trusted everywhere
-            = advocacy_partners
-
-  = render '/landing_pages/footer'
+          %header
+            Keep organizations everywhere
+            .btn.btn-primary.btn-lg Features &amp; Pricing &raquo;
+          .trusted-by
+            .header Trusted by organizations everywhere
+            = image_tag "landing_pages/logos/community-groups.png", alt: "community group partners"
