Update sign up / features and pricing links

--- a/app/views/landing_pages/for_advocacy.haml
+++ b/app/views/landing_pages/for_advocacy.haml
@@ -67,7 +67,7 @@
         .next-steps-wrap
           %header
             Keep organizations everywhere
-            .btn.btn-primary.btn-lg Features &amp; Pricing &raquo;
+            = link_to "Sign up for free", new_organization_path, class: "btn btn-primary btn-lg"
           .trusted-by
             .header Trusted by organizations everywhere
             = image_tag "landing_pages/logos/community-groups.png", alt: "community group partners"
