Add chevron styles

--- a/app/assets/stylesheets/revised/pages/landing/_signup.scss
+++ b/app/assets/stylesheets/revised/pages/landing/_signup.scss
@@ -328,3 +328,9 @@ $landing-page-targets: "shop", "school", "advocacy", "law_enforcement",
     }
   }
 }
+
+.chevron {
+  font-size: 140%;
+  font-weight: bold;
+  line-height: 0;
+}
