--- a/app/views/landing_pages/for_advocacy.haml
+++ b/app/views/landing_pages/for_advocacy.haml
@@ -8,7 +8,7 @@
           = render "/landing_pages/icons/header_#{landing_page_target}_svg"
         .banner-text
           %h1 Bike Index for Advocacy Organizations
-          %h3 The most wide-reaching and effective tools against bike theft - period.
+          %h3 The most wide-reaching and effective tools against bike theft &mdash; period.
 
   .container
     .row.main-body-row
