--- a/app/assets/stylesheets/revised/pages/landing/_home.scss
+++ b/app/assets/stylesheets/revised/pages/landing/_home.scss
@@ -20,6 +20,11 @@
   width: 100%;
   margin: 0;
 
+  .subheader-tile-link {
+    color: #fff;
+    text-decoration: none;
+  }
+
   .subheader-tile:first-of-kind {
     padding-right: 5px;
   }
@@ -44,10 +49,7 @@
     color: #fff;
     font-weight: bold;
     padding: 10px 15px;
-
-    a {
-      color: #fff;
-    }
+    text-decoration: none;
   }
 }
 
