--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -13,35 +13,35 @@
   .container-fluid.root-landing-banner-subheader
     .row
       .subheader-tile.col-md-3
-        .subheader-image.bg-image-bike-shops
-        .subheader-image-caption
-          %em for&nbsp;
-          %span.upcase
-            = link_to for_shops_path do
+        = link_to for_shops_path, class: "subheader-tile-link" do
+          .subheader-image.bg-image-bike-shops
+          .subheader-image-caption
+            %em for&nbsp;
+            %span.upcase
               Bike Shops
               %span.chevron &raquo;
       .subheader-tile.col-md-3
-        .subheader-image.bg-image-bike-cities
-        .subheader-image-caption
-          %em for&nbsp;
-          %span.upcase
-            = link_to for_law_enforcement_path do
+        = link_to for_law_enforcement_path, class: "subheader-tile-link" do
+          .subheader-image.bg-image-bike-cities
+          .subheader-image-caption
+            %em for&nbsp;
+            %span.upcase
               Cities
               %span.chevron &raquo;
       .subheader-tile.col-md-3
-        .subheader-image.bg-image-bike-schools
-        .subheader-image-caption
-          %em for&nbsp;
-          %span.upcase
-            = link_to for_schools_path do
+        = link_to for_schools_path, class: "subheader-tile-link" do
+          .subheader-image.bg-image-bike-schools
+          .subheader-image-caption
+            %em for&nbsp;
+            %span.upcase
               Schools
               %span.chevron &raquo;
       .subheader-tile.col-md-3
-        .subheader-image.bg-image-bike-groups
-        .subheader-image-caption
-          %em for&nbsp;
-          %span.upcase
-            = link_to for_advocacy_path do
+        = link_to for_advocacy_path, class: "subheader-tile-link" do
+          .subheader-image.bg-image-bike-groups
+          .subheader-image-caption
+            %em for&nbsp;
+            %span.upcase
               Community Groups
               %span.chevron &raquo;
 
