some additional bits

--- a/app/assets/stylesheets/revised/fonts.scss
+++ b/app/assets/stylesheets/revised/fonts.scss
@@ -106,9 +106,13 @@ h5 {
   }
 }
 
+.uncap {
+  text-transform: none !important;
+}
+
 .header-font-uncap {
   @extend .header-font;
-  text-transform: none !important;
+  @extend .uncap;
 }
 
 .header-font-alt {
