--- a/app/assets/stylesheets/revised/pages/bikes/show.scss
+++ b/app/assets/stylesheets/revised/pages/bikes/show.scss
@@ -147,7 +147,7 @@
     }
 
     .geomessages-wrap {
-      text-align: center;
+      text-align: right;
       padding: 8px 15px;
       background: $gray-lighter;
       border-top: 1px solid $gray-lightish;
