--- a/app/views/layouts/new_admin.html.haml
+++ b/app/views/layouts/new_admin.html.haml
@@ -28,42 +28,50 @@
               = active_link "Organizations", admin_organizations_path, role: "button", class: "nav-link", match_controller: true
             %li.nav-item
               = active_link "News", admin_news_index_path, role: "button", class: "nav-link", match_controller: true
-            %li.dropdown.nav-item
-              - ambassador_links = {"Ambassadors" => admin_ambassadors_path, "Ambassador Tasks" => admin_ambassador_tasks_path }
-              %a.dropdown-toggle.nav-link{"data-toggle" => "dropdown", class: ambassador_links.has_value?(request.path) ? "active" : ""}
-                Ambassadors
-              .dropdown-menu.admin-nav-dropdown
-                - ambassador_links.each do |link, path|
-                  = active_link link, path, role: "button", class: "btn btn-light dropdown-item"
-            %li.dropdown.nav-item
-              - stolen_links = {"Stolen" => admin_stolen_bikes_path, "Recoveries" => admin_recoveries_path, "Recovery Displays" => admin_recovery_displays_path, "Stolen Twitterbot URL" => ENV['STOLEN_TWITTERBOT_URL'].gsub(/bikes\z/, '')  }
-              %a.dropdown-toggle.nav-link{"data-toggle" => "dropdown", class: stolen_links.has_value?(request.path) ? "active" : ""}
-                Stolen
-              .dropdown-menu.admin-nav-dropdown
-                - stolen_links.each do |link, path|
-                  = active_link link, path, role: "button", class: "btn btn-light dropdown-item"
-            %li.dropdown.nav-item
-              - paid_links = {"Payments" => admin_payments_path, "Paid Features" => admin_paid_features_path, "Invoices" => admin_invoices_path}
-              %a.dropdown-toggle.nav-link{"data-toggle" => "dropdown",  class: paid_links.has_value?(request.path) ? "active" : ""}
-                Paid
-              .dropdown-menu.admin-nav-dropdown
-                - paid_links.each do |link, path|
-                  = active_link link, path, role: "button", class: "btn btn-light dropdown-item"
-            %li.dropdown.nav-item
-              - other_links = {"Memberships" => admin_memberships_path, "Manufacturers" => admin_manufacturers_path, "Invitations" => admin_invitations_path, "TSV Exports" => admin_tsvs_path, "Maintenance" => admin_maintenance_path, "Failed Bikes" => admin_failed_bikes_path, "Component Types" => admin_ctypes_path, "Graphs" => admin_graphs_path, "Edit Paints" => admin_paints_path, "Feedbacks" => admin_feedbacks_path, "Tweets" => admin_tweets_path, "Stickers" => admin_bike_codes_path, "Exports" => admin_exports_path, "Bulk Imports" => admin_bulk_imports_path, "Partial Bikes" => admin_partial_bikes_path, "Duplicates" => duplicates_admin_bikes_path}
-              %a.dropdown-toggle.nav-link{"data-toggle" => "dropdown",  class: other_links.has_value?(request.path) ? "active" : ""}
-                Other
-              .dropdown-menu.admin-nav-dropdown
-                - other_links.each do |link, path|
-                  = active_link link, path, role: "button", class: "btn btn-light dropdown-item"
+            %li.nav-item
+              = active_link "Stolen", admin_stolen_bikes_path, role: "button", class: "nav-link", match_controller: true
             - if Rails.env.development?
               %li.dropdown.nav-item
-                %a.dropdown-toggle.nav-link{"data-toggle" => "dropdown"}
+                %a.dropdown-toggle.nav-link{ "data-toggle" => "dropdown" }
                   Mailers
                 .dropdown-menu.admin-nav-dropdown
                   = link_to "Organized", '/rails/mailers/organized_mailer' , role: "button", class: "btn btn-light dropdown-item"
                   = link_to "Admin", '/rails/mailers/admin_mailer' , role: "button", class: "btn btn-light dropdown-item"
                   = link_to "Customer", '/rails/mailers/customer_mailer' , role: "button", class: "btn btn-light dropdown-item"
+            %li
+              :ruby
+                other_links = [
+                                { title: "POS Integration", path: "https://posintegration.bikeindex.org", match_controller: false },
+                                { title: "Ambassadors", path: admin_users_path(search_ambassadors: true), match_controller: false },
+                                { title: "Ambassador Tasks", path: admin_ambassador_tasks_path, match_controller: true },
+                                { title: "Payments", path: admin_payments_path, match_controller: true },
+                                { title: "Paid Features", path: admin_paid_features_path, match_controller: true },
+                                { title: "Invoices", path: admin_invoices_path, match_controller: true },
+                                { title: "Recoveries", path: admin_recoveries_path, match_controller: true },
+                                { title: "Recovery Displays", path: admin_recovery_displays_path, match_controller: true },
+                                { title: "Stolen Twitterbot", path: ENV["STOLEN_TWITTERBOT_URL"].gsub(/bikes\z/, ""), match_controller: false },
+                                { title: "Memberships", path: admin_memberships_path, match_controller: true },
+                                { title: "Manufacturers", path: admin_manufacturers_path, match_controller: true },
+                                { title: "Invitations", path: admin_invitations_path, match_controller: true },
+                                { title: "TSV Exports", path: admin_tsvs_path, match_controller: true },
+                                { title: "Maintenance", path: admin_maintenance_path, match_controller: true },
+                                { title: "Failed Bikes", path: admin_failed_bikes_path, match_controller: true },
+                                { title: "Component Types", path: admin_ctypes_path, match_controller: true },
+                                { title: "Graphs", path: admin_graphs_path, match_controller: true },
+                                { title: "Edit Paints", path: admin_paints_path, match_controller: true },
+                                { title: "Feedbacks", path: admin_feedbacks_path, match_controller: true },
+                                { title: "Tweets", path: admin_tweets_path, match_controller: true },
+                                { title: "Stickers", path: admin_bike_codes_path, match_controller: true },
+                                { title: "Exports", path: admin_exports_path, match_controller: true },
+                                { title: "Bulk Imports", path: admin_bulk_imports_path, match_controller: true },
+                                { title: "Partial Bikes", path: admin_partial_bikes_path, match_controller: true },
+                                { title: "Duplicates", path: duplicates_admin_bikes_path, match_controller: false }
+                              ]
+                other_link_active = other_links.detect { |l| current_page_active?(l[:path], l[:match_controller]) }
+                other_select_opts = options_for_select(other_links.map { |l| [l[:title], l[:path]] }, other_link_active && other_link_active[:path])
+              .fancy-select.unfancy.no-restore-on-backspace
+                = select(:admin, :other_navigation, other_select_opts, { prompt: "Other pages" }, { class: "form-control" })
+
           %ul.navbar-nav.ml-auto
             %li.nav-item
               = link_to "Exit Admin", root_path, role: "button", class: "nav-link"
