--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -1,8 +1,7 @@
-%h1
-  Editing #{@user.email}
-
-.row-fluid
-  .span6
+.row
+  .col-md-6
+    %h1
+      Editing #{@user.email}
     %table.table-list
       %tbody
         %tr
@@ -13,7 +12,6 @@
               <span class="donor-icon">D</span>
             - if @user.paid_org?
               <span class="paid-org-icon">O</span>
-
         %tr
           %td
             Email: Newsletters
@@ -24,84 +22,122 @@
             Email: Unstolen
           %td
             = "&#x2713;".html_safe if @user.notification_unstolen
-= form_for [:admin, @user] do |f|
-  .row-fluid
-    - if @user.errors.any?
-      #alert-block
-        .alert.alert-error
-          %h4
-            Please fix the following
-            = pluralize(@user.errors.count, "error")
-          %ul
-            - @user.errors.full_messages.each do |msg|
-              %li
-                = msg
-    .span6.padded
-      .form.form-horizontal
-        %h3
-          User attributes
-        .control-group.padded
-          %lable.control-label
+        %tr
+          %td
             Created
-          .controls.convertTime
+          %td.convertTime
             = l @user.created_at, format: :convert_time
-        .control-group.padded
-          %lable.control-label
+        %tr
+          %td
             Updated
-          .controls.convertTime
+          %td.convertTime
             = l @user.updated_at, format: :convert_time
+  .col-md-6.mt-auto
+    - if @user.avatar?
+      = @user.avatar
+    %table.table-list
+      %tr
+        %td
+          Ambassador?
+        %td
+          %strong
+            = @user.ambassador?
+      %tr
+        %td
+          Name
+        %td
+          = @user.name
+      %tr
+        %td
+          Phone
+        %td
+          = @user.phone
+      %tr
+        %td
+          Website
+        %td
+          = @user.website
+      %tr
+        %td
+          City
+        %td
+          = @user.city
 
-        .control-group.padded
-          = f.label :name, class: "control-label"
-          .controls
-            = f.text_field :name
-        .control-group
-          = f.label :email, class: "control-label"
-          .controls
-            = f.email_field :email
-        .control-group
-          %label.control-label
-            Secondary Emails
-          .controls
-            = text_area_tag :secondary_emails, @user.secondary_emails.join(", "), disabled: true, rows: 2, style: "width: 100%; font-size: 80%;"
-        .control-group
-          = f.label :username, class: "control-label"
-          .controls
-            = f.text_field :username
-    .span6.padded
-      .form.form-horizontal
-        .control-group
-          = f.label :confirmed, class: "control-label"
-          .controls
-            = f.check_box :confirmed, disabled: @user.confirmed
-        .control-group
-          = f.label :superuser, class: "control-label"
-          .controls
-            = f.check_box :superuser
+= form_for [:admin, @user] do |f|
+  - if @user.errors.any?
+    = render partial: "/shared/errors", locals: { name: "User", obj: @user }
+  .row.mt-4
+    .col-md-6
+      .form-group
+        = f.label :name
+        = f.text_field :name, class: "form-control"
+    .col-md-6
+      .form-group
+        = f.label :email
+        = f.email_field :email, class: "form-control"
+  .row
+    .col-md-6
+      .form-group
+        = f.label :username
+        = f.text_field :username, class: "form-control"
+      .form-group
+        .form-check.form-check-inline
+          = f.check_box :confirmed, disabled: @user.confirmed, class: "form-check-input"
+          = f.label :confirmed, class: "form-check-label"
+        .form-check.form-check-inline
+          = f.check_box :banned, class: "form-check-input"
+          = f.label :banned, class: "form-check-label"
+      .form-group
+        .form-check.form-check-inline
+          = f.check_box :superuser, class: "form-check-input"
+          = f.label :superuser, class: "form-check-label"
         - if current_user.developer?
-          .control-group
-            = f.label :developer, class: "control-label"
-            .controls
-              = f.check_box :developer
-        .control-group
-          = f.label :banned, class: "control-label"
-          .controls
-            = f.check_box :banned
-        .control-group
-          = f.label :can_send_many_stolen_notifications, class: "control-label"
-          .controls
-            = f.check_box :can_send_many_stolen_notifications
-
-        .padded
-          = f.submit 'Save', class: 'button-green pull-right'
+          .form-check.form-check-inline
+            = f.check_box :developer, class: "form-check-input"
+            = f.label :developer, class: "form-check-label"
+      .form-group
+        .form-check.form-check-inline
+          = f.check_box :can_send_many_stolen_notifications, class: "form-check-input"
+          = f.label :can_send_many_stolen_notifications, class: "form-check-label"
+    .col-md-6
+      .form-group
+        = f.label :secondary_emails
+        = text_area_tag :secondary_emails, @user.secondary_emails.join(", "), disabled: true, rows: 2, class: "form-control"
 
 
+
+  .row.justify-content-end.mt-4
+    .col-auto
+      = f.submit 'Save', class: 'btn btn-success'
+- if @user.ambassador?
+  %h2 Ambassador Tasks
+  - ambassador = Ambassador.find(@user.id)
+  %p
+    %strong= "#{ambassador.progress_count} complete"
+
+  %table.table.table-striped.table-bordered.ambassador-tasks-table
+    %thead.small-header.thead-light
+      %tr
+        %th Task
+        %th Completed at
+    %tbody
+      - ambassador.ambassador_task_assignments.each do |task|
+        %tr
+          %td
+            %strong= task.title
+          %td
+            - if task.completed_at
+              %span.convertTime= l task.completed_at, format: :convert_time
+.mt-4
+%h3
+  Bikes
+= render partial: "admin/bikes/admin_bikes_table", locals: {bikes: @bikes}
 
 %h3
   Donations
-%section.full-screen-table{ style: 'padding-top: 0;' }
+.full-screen-table
   %table.table.table-striped.table-bordered
-    %thead
+    %thead.thead-light
       %th
         Date
       %th
@@ -119,103 +155,41 @@
         %td
           = "&#x2713;".html_safe if payment.is_payment
 
-- if @bikes.present?
-  %h2.pull-left
-    = pluralize(@bikes.total_count, "Bike")
-  .paginate-container
-    = paginate @bikes
-  %h3.padded
-    %span
-      #{@user.email}
-    Bikes
-  %ul
-    - @bikes.decorate.each do |bike|
-      - display = bike.title
-      - display = "#{display} (hidden)" if bike.hidden
-      - display = "#{display} (example)" if bike.example
-
-      %li
-        = link_to display, edit_admin_bike_url(bike)
-
-%h3.padded
-  %span
-    #{@user.email}
-  ownerships
-- if @ownerships.present?
-  %h2.pull-left
-    = pluralize(@ownerships.total_count, "Ownership")
-  %section.full-screen-table
-    %table.table.table-striped.table-bordered
-      %thead
-        %th
-          ID
-        %th
-          Created&nbsp;<small class="convertTimezone"></small>
-        %th
-          Creator
-        %th
-          Owner email
-        %th
-          Current?
-      %tbody
-        - @ownerships.each do |ownership|
-          %tr
-            %td
-              = link_to ownership.id, edit_admin_ownership_url(ownership.id)
-            %td
-              %span.convertTime
-                = l ownership.created_at, format: :convert_time
-            %td
-              - u = ownership.creator
-              - if u && u.name.present?
-                = u.name
-              - else
-                = u && u.email
-            %td
-              = ownership.owner_email
-            %td.table-cell-check
-              = "&#x2713;".html_safe if ownership.current
-  .paginate-container
-    = paginate @ownerships
-- else
-  %p
-    #{@user.email} has no Bikes
-
 - if @user.memberships.count > 0
-  %section.full-screen-table
-    %h2
+  .full-screen-table
+    %h2.mt-4
       = @user.memberships.count
       Current memberships
-    %table#admin-users-table.table.table-striped.table-bordered
-      %thead
+    %table.table.table-striped.table-bordered
+      %thead.thead-light
         %th
           Id&nbsp;
-        %th.medium-screens
+        %th.d-none.d-lg-table-cell
           Created&nbsp;<small class="convertTimezone"></small>
         %th
           Email
         %th
           Organization
-        %th.large-screens
+        %th.d-none.d-xl-table-cell
           Management links
       %tbody
         - @user.memberships.each do |membership|
           %tr
             %td
               = link_to membership.id, admin_membership_url(membership)
-            %td.medium-screens
+            %td.d-none.d-lg-table-cell
               %span.convertTime
                 = l membership.created_at, format: :convert_time
             %td
               = membership.user.email
             %td
               = link_to membership.organization.name, admin_organization_path(membership.organization)
-            %td.large-screens
+            %td.d-none.d-xl-table-cell
               #{link_to 'Edit', edit_admin_membership_url(membership)}
 
 - if @user.user_emails.count > 1
   %h2 User emails
-  %section.full-screen-table
+  .full-screen-table
     %table.table.table-striped.table-bordered
       %thead
         %th
@@ -242,5 +216,7 @@
             %td
               = user_email.old_user_id
 
-.actions.padded
-  = link_to "Delete #{@user.email}!", admin_user_url(@user), method: :delete, confirm: "Are you sure?", class: "button-red"
+
+.mt-4.mb-4.row.justify-content-end
+  .col-auto
+    = link_to "Delete #{@user.email}!", admin_user_url(@user), method: :delete, confirm: "Are you sure?", class: "btn btn-danger"
