--- a/app/views/admin/bikes/edit.html.haml
+++ b/app/views/admin/bikes/edit.html.haml
@@ -15,7 +15,7 @@
           %td
             Current Email
           %td
-            = link_to @bike.owner.email, edit_admin_user_url(@bike.owner)
+            = link_to @bike.owner.email, edit_admin_user_url(@bike.owner.id)
         %tr
           %td
             Donor
