--- a/app/views/admin/organizations/index.html.haml
+++ b/app/views/admin/organizations/index.html.haml
@@ -4,6 +4,25 @@
       Manage Organization
   .col-md-3
     %ul
+      - if params[:search_kind].present?
+        %li.nav-item
+          = link_to params[:search_kind].humanize, admin_organizations_path(sortable_search_params.except(:search_kind)), class: "nav-link active"
+      %li.nav-item
+        - active_pos_kind = params[:search_pos]
+        %a.nav-link.dropdown-toggle{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false", class: (active_pos_kind.present? ? "active" : "") }
+          - if active_pos_kind.present?
+            = active_pos_kind.humanize
+          - else
+            POS
+        .dropdown-menu
+          - Organization.pos_kinds.each do |pos_kind|
+            - pos_kind
+            - kind_active = active_pos_kind == pos_kind
+            = link_to pos_kind.humanize, admin_organizations_path(sortable_search_params.merge(search_pos: kind_active ? nil : pos_kind)), class: "dropdown-item #{kind_active ? 'active' : ''}"
+
+      %li.nav-item
+        - paid_search_params = sortable_search_params.merge(search_paid: !@search_paid)
+        = link_to "Paid", admin_organizations_path(paid_search_params), class: @search_paid ? "nav-link active" : "nav-link"
       %li.nav-item
         = link_to 'New Organization', new_admin_organization_url, class: "nav-link"
 .row.mb-4
@@ -20,10 +39,10 @@
     = form_tag admin_organizations_path, method: :get, class: "form-inline" do
       = hidden_field_tag :sort, sort_column
       = hidden_field_tag :sort_direction, sort_direction
-      .form-check.ml-auto.mr-2.ml-2.align-self-end
-        = check_box_tag :search_is_paid, true, checked = sortable_search_params[:search_is_paid] ? true : false, class:"form-check-input"
-        = label_tag :search_is_paid, "Paid only"
-      .form-group
+      = hidden_field_tag :search_paid, @search_paid
+      = hidden_field_tag :search_kind, params[:search_kind]
+      = hidden_field_tag :search_pos, params[:search_pos]
+      .form-group.ml-auto.align-self-end
         = text_field_tag :search_query, params[:search_query], placeholder: "Name/Location#{current_user.developer? ? '/Paid features' : '' }", class: "form-control mt-4"
 
       = submit_tag 'Search', name: 'search', class: 'btn btn-primary mt-4 ml-2'
